(web) (select users) fixed avatars way too big

--- a/SchoolSquirrel/src/styles.scss
+++ b/SchoolSquirrel/src/styles.scss
@@ -84,6 +84,11 @@ ngb-typeahead-window.dropdown-menu.show {
     border-radius: 50%;
 }
 
+.avatar-small {
+    width: 1.3rem;
+    height: 1.3rem;
+}
+
 .badge.badge-chip {
     font-size: 85%;
     font-weight: normal;
